# tiny-clippy

./: .gitignore  Cargo.toml  README.md  bacon.toml  styles.css
.github/workflows/: old_release.yml  release.yml
archive/: main_minifb.rs  main_original_eframe.rs  main_pixels.rs  main_softbuffer_version.rs
src/: app.rs  garbage  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
